Fix jumping

--- a/src/css/codeblocks.css
+++ b/src/css/codeblocks.css
@@ -13,6 +13,10 @@
 	background: linear-gradient(90deg, var(--language-border-colour), var(--language-border-colour) var(--language-border-width), var(--code-styler-codeblock-background-colour) var(--language-border-width), var(--code-styler-codeblock-background-colour) 100%) !important;
 	padding-left: var(--language-border-width) !important;
 }
+.code-styler code {
+	padding-top: var(--code-padding) !important;
+	padding-bottom: var(--code-padding) !important;
+}
 .code-styler pre.code-styler-pre code {
 	display: grid;
 	grid-template-columns: min-content auto;
@@ -308,9 +312,6 @@ pre.code-styler-pre .code-styler-line-text {
 /** Scroll Bar */
 pre.code-styler-pre::-webkit-scrollbar,
 pre.code-styler-pre > code::-webkit-scrollbar {
-	/* opacity: unset !important; */
-	/* width: revert !important; */
-	/* height: revert !important; */
 	width: var(--code-padding) !important;
 	height: var(--code-padding) !important;
 }
